--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,9 @@
         <activity android:name=".pregunta" />
         <activity android:name=".Presentacion2" />
         <activity android:name=".Login" />
-        <activity android:name=".Registro"></activity>
+        <activity android:name=".Registro" />
+        <activity android:name=".Preguntas0" />
+        <activity android:name=".Pregunta0"></activity>
     </application>
 
 </manifest>
